<resources>
    <string name="app_name">BondoMan</string>

    <string name="hub_nav_transaction">Transaction</string>
    <string name="hub_nav_scan">Scan</string>
    <string name="hub_nav_twibbon">Twibbon</string>
    <string name="hub_nav_stats">Stats</string>
    <string name="hub_nav_settings">Settings</string>

    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_enter">Login</string>

    <string name="transaction_label_number">No</string>
    <string name="transaction_label_title">Title</string>
    <string name="transaction_label_amount">Amount</string>
    <string name="transaction_label_category">Category</string>
    <string name="transaction_label_location">Location</string>
    <string name="transaction_label_timestamp">Timestamp</string>
    <string name="transaction_label_submit">Submit</string>

    <string name="transaction_category_income">Income</string>
    <string name="transaction_category_expenses">Expenses</string>

    <string name="transaction_add_toast_error_title">Please enter a title</string>
    <string name="transaction_add_toast_error_amount">Please enter an amount</string>
    <string name="transaction_add_toast_success">Transaction saved successfully</string>
    <string name="transaction_edit_toast_success">Transaction edited successfully</string>
    <string name="transaction_edit_toast_error_non">Transaction edited failed because transaction does not exist</string>

    <string name="settings_save_transaction">Save transaction list</string>
    <string name="settings_send_transaction">Send transaction list</string>
    <string name="settings_random_transaction">Generate random transaction</string>
    <string name="settings_logout">Log out</string>

    <string name="email_subject">Bondoman: Transaction Data</string>
    <string name="email_text">Attached are transaction
        data from Bondoman, data is recorded at</string>
    <string name="email_toast_success">Sending file...</string>
    <string name="email_toast_fail">Failed to send file</string>

    <string name="save_toast_success">File saved</string>
    <string name="settings_toast_uninitialized_viewmodel">Error: Data Unavailable</string>

    <string name="excel_dialog_label">Choose excel format</string>
    <string name="excel_dialog_positive">Confirm</string>
    <string name="excel_dialog_negative">Cancel</string>

    <string name="delete_confirm_dialog_label">Are you sure to delete this transaction?</string>
    <string name="delete_confirm_dialog_positive">Confirm</string>
    <string name="delete_confirm_dialog_negative">Cancel</string>

    <string name="scan_nota">Scan Nota</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>

    <string name="scan_add_toast_success">Successfully added new transactions</string>
    <string name="scan_add_toast_failed">Failed to get response from server</string>
    <string name="scan_enable_camera">Please allow camera permission to access this feature</string>
    <string name="scan_rescan">Rescan</string>
    <string name="scan_save">Save</string>

    <string name="twibbon_add_toast_success">Successfully saved twibbon</string>
    <string name="twibbon_add_toast_failed">Failed to save twibbon</string>

    <string-array name="category_choices">
        <item>Income</item>
        <item>Expenses</item>
    </string-array>

    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>

    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="get_latest_location">Get latest location</string>
    <string name="delete_location">Delete location</string>
    <string name="no_location_data">No location data</string>

    <string name="connection_lost">Connection Lost</string>
    <string name="type_your_email">Type your email...</string>
    <string name="type_your_password">Type your password...</string>
    <string name="type_transaction_title">Type transaction title...</string>
    <string name="type_transaction_amount">Type transaction amount...</string>
    <string name="guy_logo">GUY Logo</string>
    <string name="location_icon">location icon</string>
    <string name="view_location">View Location</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="amount">Amount</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="back_button">Back button</string>
    <string name="go_back">Go back</string>
    <string name="header">Header</string>
    <string name="menu">Menu</string>
    <string name="add_new_transaction">Add new transaction</string>
</resources>
