<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/hub_nav_transaction"
        android:icon="@drawable/ic_hub_nav_transaction"
        android:title="@string/hub_nav_transaction"
        app:actionLayout="@layout/action_menu_item" />

    <item
        android:id="@+id/hub_nav_scan"
        android:icon="@drawable/ic_hub_nav_scan"
        android:title="@string/hub_nav_scan"
        app:actionLayout="@layout/action_menu_item"/>

    <item
        android:id="@+id/hub_nav_twibbon"
        android:icon="@drawable/ic_hub_nav_twibbon"
        android:title="@string/hub_nav_twibbon"
        app:actionLayout="@layout/action_menu_item"/>

    <item
        android:id="@+id/hub_nav_stats"
        android:icon="@drawable/ic_hub_nav_stats"
        android:title="@string/hub_nav_stats"
        app:actionLayout="@layout/action_menu_item"/>

    <item
        android:id="@+id/hub_nav_settings"
        android:icon="@drawable/ic_hub_nav_settings"
        android:title="@string/hub_nav_settings"
        app:actionLayout="@layout/action_menu_item" />

</menu>