<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hub.settings.SettingsFragment"
    android:background="?attr/background">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="sans-serif"
        android:text="@string/settings_save_transaction"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_send_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_send_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="sans-serif"
        android:text="@string/settings_send_transaction"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_random_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_transaction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_random_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="sans-serif"
        android:text="@string/settings_random_transaction"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_send_transaction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif"
        android:text="@string/settings_logout"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_random_transaction" />


</androidx.constraintlayout.widget.ConstraintLayout>